Fix Surfer Vandersloot's profile image on mobile

--- a/css/app.css
+++ b/css/app.css
@@ -1121,8 +1121,7 @@ footer {
     margin-bottom: 1rem;
   }
   .anna, 
-  .beurdouche,
-  .vandersloot {
+  .beurdouche {
     max-block-size: 10rem;
   }
 
